--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   continuation: circleci/continuation@0.3.1
 
 jobs:
-  deploychecks:
+  messagechecks:
     docker:
       - image: cimg/base:stable
     resource_class: small
@@ -33,6 +33,6 @@ jobs:
       - continuation/continue:
           configuration_path: .circleci/nextconfig.yml
 workflows:
-  deploychecks:
+  messagecheck:
     jobs:
-      - deploychecks
+      - messagechecks
